--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a reporter and deisgner with <a href=nj.com>NJ.com</a>and the Star-Ledger.</NJ></p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Taylorsville, KY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, biking, and reading</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working for the New York Times</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Summit, NJ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To create interactive and informative stories that help people understand their neighbors and their worlds.</p>
     </section>
 
     <footer id="footer">
